# claude-code-telegram-bot

./: .env.example  .gitignore  Dockerfile  README.md  claude-hooks.json  docker-compose.yml  docker-entrypoint.sh  hook.py  pyproject.toml
src/claude_telegram/: __init__.py  claude.py  config.py  main.py  markdown.py  telegram.py  tunnel.py
tests/: __init__.py  conftest.py  test_claude.py  test_hook.py  test_main.py  test_markdown.py  test_telegram.py  test_tunnel.py
